[gd_scene load_steps=10 format=2]

[ext_resource path="res://graphics/imgs/bg.png" type="Texture" id=1]
[ext_resource path="res://player/Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://world/Bottom.tscn" type="PackedScene" id=3]
[ext_resource path="res://world/Obstacles.tscn" type="PackedScene" id=4]
[ext_resource path="res://graphics/Born2bSportyV2.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://graphics/game_theme.tres" type="Theme" id=6]
[ext_resource path="res://world/World.gd" type="Script" id=7]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 50, 10 )

[sub_resource type="DynamicFont" id=2]
size = 32
font_data = ExtResource( 5 )

[node name="World" type="Node2D"]
script = ExtResource( 7 )

[node name="Background" type="Sprite" parent="."]
texture = ExtResource( 1 )
centered = false

[node name="Player" parent="." instance=ExtResource( 2 )]
position = Vector2( 70, 256 )

[node name="Obstacle" parent="." instance=ExtResource( 4 )]
position = Vector2( 288, 0 )

[node name="Obstacle2" parent="." instance=ExtResource( 4 )]
position = Vector2( 458, 0 )

[node name="StaticBody2D" type="StaticBody2D" parent="."]
position = Vector2( 70, -10 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
shape = SubResource( 1 )

[node name="Bottom" parent="." instance=ExtResource( 3 )]
position = Vector2( 0, 440 )

[node name="Control" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
theme = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Pause" type="Button" parent="Control"]
margin_left = 209.483
margin_top = 6.02786
margin_right = 281.483
margin_bottom = 40.0279
theme = ExtResource( 6 )
text = "PAUSE"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="Control"]
visible = false
modulate = Color( 1, 1, 1, 0.694118 )
margin_right = 288.0
margin_bottom = 512.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Control"]
margin_left = 10.7319
margin_top = 24.4688
margin_right = 210.732
margin_bottom = 91.4688
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Score: 0
Highscore: 0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ResumeButton" type="Button" parent="Control"]
pause_mode = 2
visible = false
margin_left = 100.315
margin_top = 248.077
margin_right = 190.315
margin_bottom = 282.077
text = "PLAY"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ResetScore" type="Button" parent="Control"]
pause_mode = 2
visible = false
margin_left = 70.0
margin_top = 292.121
margin_right = 222.0
margin_bottom = 326.121
text = "RESET SCORE"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="Control/Pause" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Control/ResumeButton" to="." method="_on_ResumeButton_pressed"]
[connection signal="pressed" from="Control/ResetScore" to="." method="_on_ResetScore_pressed"]
